[gd_scene load_steps=6 format=3 uid="uid://cl7f0axpvoqkr"]

[ext_resource type="Script" uid="uid://cjgduo6o40xxl" path="res://scenes/hud/hud.gd" id="1_48c2t"]
[ext_resource type="Theme" uid="uid://c3m0ixjxcghn3" path="res://themes/main_theme.tres" id="2_c45xl"]
[ext_resource type="Texture2D" uid="uid://cgt15ia64fmmy" path="res://assets/images/gui/ScrollBar_Blank_Scroller.png" id="3_0bx4p"]
[ext_resource type="Texture2D" uid="uid://crjsybky0g4wp" path="res://assets/images/gui/Icon_Small_Coin.svg" id="3_c45xl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mgtrf"]
texture = ExtResource("3_0bx4p")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_48c2t")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 109.0
theme = ExtResource("2_c45xl")

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 384.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.270588, 0.168627, 1)

[node name="GoodClients" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 40.0
offset_right = 292.0
offset_bottom = 63.0
text = "Clients satisfaits: 0"

[node name="BadClients" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 64.0
offset_right = 278.0
offset_bottom = 87.0
text = "Clients m√©content: 0"

[node name="CoinPanel" type="Panel" parent="Control"]
offset_left = 503.0
offset_top = 14.0
offset_right = 711.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxTexture_mgtrf")

[node name="Coin" type="TextureRect" parent="Control/CoinPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = -7.0
offset_right = 54.0
offset_bottom = 46.0
texture = ExtResource("3_c45xl")
expand_mode = 1

[node name="Money" type="Label" parent="Control/CoinPanel"]
layout_mode = 0
offset_left = 60.0
offset_top = 5.0
offset_right = 195.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"
